<resources>
    <string name="app_name" translatable="false">Follower</string>
    <string name="arg_addressFragment_trackId" translatable="false">com.example.follower.AddressTraceFragment.EXTRA_TRACK_ID</string>
    <string name="arg_toSinglePointerMap_Time" translatable="false">com.example.follower.SinglePointerMapFragment.TIME</string>
    <string name="arg_toSinglePointerMap_Longitude" translatable="false">com.example.follower.SinglePointerMapFragment.LONGITUDE</string>
    <string name="arg_toSinglePointerMap_Latitude" translatable="false">com.example.follower.SinglePointerMapFragment.LATITUDE</string>
    <string name="pref_app_launch_counter" translatable="false">pref_app_launch_counter</string>
    <string name="pref_never_show_rate_app" translatable="false">pref_never_show_rate_app</string>
    <string name="pref_report_bug" translatable="false">pref_report_bug</string>
    <string name="pref_acra_enable" translatable="false">pref_acra_enable</string>
    <string name="pref_acra_disable" translatable="false">acra.disable</string>
    <string name="pref_uid" translatable="false">pref_uid</string>
    <string name="pref_tracking_start_time" translatable="false">pref_tracking_start_time</string>
    <string name="pref_tracking_stop_time" translatable="false">pref_tracking_end_time</string>
    <string name="pref_theme" translatable="false">pref_theme</string>
    <string name="pref_lang" translatable="false">pref_lang</string>
    <string name="pref_battery_optimization_settings" translatable="false">pref_battery_optimization_settings</string>
    <string name="pref_min_distance" translatable="false">pref_min_distance</string>
    <string name="pref_root_is_ok" translatable="false">pref_root_is_ok</string>
    <string name="pref_min_location_update_interval" translatable="false">pref_min_location_update_interval</string>
    <string name="pref_track_representation" translatable="false">pref_track_representation</string>
    <string name="pref_marker_set" translatable="false">pref_set</string>
    <string name="pref_line" translatable="false">pref_line</string>
    <string name="pref_track_display_mode" translatable="false">pref_track_display_mode</string>
    <string name="pref_value_track_display_mode_none" translatable="false">pref_value_track_display_mode_none</string>
    <string name="pref_value_track_display_mode_map" translatable="false">pref_value_track_display_mode_map</string>
    <string name="pref_value_track_display_mode_addresses_list" translatable="false">pref_value_track_display_mode_addresses_list</string>
    <string name="pref_enable_auto_tracking" translatable="false">pref_enable_auto_tracking</string>
    <string name="pref_purge_cache" translatable="false">pref_purge_cache</string>
    <string name="pref_reset_to_default" translatable="false">pref_reset_to_default</string>
    <string name="pref_battery_optimization" translatable="false">pref_battery_optimization</string>
    <string name="pref_is_first_launch" translatable="false">pref_is_first_launch</string>
    <string name="pref_enable_biometric_protection" translatable="false">pref_enable_biometric_protection</string>
    <string name="desc_map_view" translatable="false">DESCRIPTION_map_fragment_map_view</string>
    <string name="desc_sp_map_view" translatable="false">DESCRIPTION_map_fragment_single_pointer_map_view</string>
    <string name="location_permission_dialog_explanation">App needs geolocation to track your activity</string>
    <string name="title_gps_ready">GPS Ready</string>
    <string name="title_tracking">Tracking</string>
    <string name="error_location_permission_denied">You have denied location permission!</string>
    <string name="error_location_offline">Location is turned off, enable to make app work.</string>
    <string name="title_time">Time</string>
    <string name="title_map">Map</string>
    <string name="title_tracking_controls">Tracking controls</string>
    <string name="title_min_distance">Minimum distance between location updates (in meters)</string>
    <string name="title_min_location_update_interval">Minimum time interval between location updates (in seconds)</string>
    <string name="title_reset_to_defaults">Reset to defaults</string>
    <string name="title_reset_to_defaults_dialog">You will restore default application settings. Proceed?</string>
    <string name="title_settings">Settings</string>
    <string name="title_report_bug">Report bug</string>
    <string name="title_light_theme">Light theme</string>
    <string name="title_default_theme">Device default theme</string>
    <string name="title_dark_theme">Dark theme</string>
    <string name="title_themes">Themes</string>
    <string name="title_language">Language</string>
    <string name="hint_name_your_track">Name your track</string>
    <string name="message_you_have_no_waypoints">You have no waypoints in your trace yet</string>
    <string name="title_stop_tracking">Stop tracking</string>
    <string name="title_continue">Continue</string>
    <string name="title_erase_logs">Erase logs</string>
    <string name="toast_track_saved">Track saved</string>
    <string name="db_error">Something wrong with database!</string>
    <string name="title_tracks">Tracks</string>
    <string name="title_not_started">Not Started</string>
    <string name="title_start_tracking">Start tracking</string>
    <string name="title_pick_email_provider">Pick an Email provider</string>
    <string name="title_send_logs">Send logs to developer</string>
    <string name="title_set_of_markers">Set of markers</string>
    <string name="title_line">Line</string>
    <string name="title_track_representing">Represent track as…</string>
    <string name="title_file_manager_problem">Unable to save file. The problem might be with File Manager.</string>
    <string name="io_error">Something wrong with file system!</string>
    <string name="title_show_map">Show Map</string>
    <string name="title_show_addresses">Show addresses list</string>
    <string name="title_remember_choice">Remember my choice</string>
    <string name="error_couldnt_save_preference">"Couldn't save preference! "</string>
    <string name="error_unexpected">Unexpected error happened!</string>
    <string name="title_addresses_list">Addresses list</string>
    <string name="title_always_ask">Always ask</string>
    <string name="title_dont_ask_againg">Don\'t ask again</string>
    <string name="title_track_display_mode">Display track as…</string>
    <string name="title_tracklist_is_empty">You have to tracks saved.</string>
    <string name="title_map_display_model">If track displaying on the map (see the option above), you can represent it as a line or as a set of markers</string>
    <string name="title_track_representing_summary">Observe saved tracks on a map or as sequence of addresses</string>
    <string name="title_loading">Loading</string>
    <string name="title_automatic_tracking_setting_summary">Enable automatic tracking in some time range</string>
    <string name="title_automatic_tracking_setting">Auto-tracking</string>
    <string name="title_auto_tracking_start_time">Automatic tracking start time</string>
    <string name="title_auto_tracking_stop_time">Automatic tracking stop time</string>
    <string name="auto_tracking_scheduling_successful">Scheduling has been successful!</string>
    <string name="auto_tracking_cancelling_successful">Auto-tracking cancelled successfully!</string>
    <string name="title_records_access">Records access</string>
    <string name="title_fingerprint_instruction">Touch your finger on the fingerprint sensor to reveal your records</string>
    <string name="title_not_recognized">Not recognized</string>
    <string name="summary_lack_of_fingerprint_permission">Fingerprint permission haven\'t been granted.</string>
    <string name="summary_lack_of_fingerprint_sensor">You don\'t have fingerprint sensor!</string>
    <string name="title_lock_records">Auto-lock records</string>
    <string name="summary_lock_explanation">Turn this feature on to auto-lock your records and use a fingerprint to unlock it.</string>
    <string name="error_cant_stop_auto_tacking">Unexpected error while cancelling auto tracking!</string>
    <string name="address_unknown">Address unknown for (lon: %.6f, lat %.6f)</string>
    <string name="error_couldnt_save_track">Couldn\'t save track!</string>
    <string name="error_no_connection">No Internet connection!</string>
    <string name="title_logs">Logs</string>
    <string name="title_sharing_track">"Sharing Follower track (%s)"</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="as_a_file">As a file…</string>
    <string name="pref_acra_general" translatable="false">pref_acra_general</string>
    <string name="title_privacy">Privacy</string>
    <string name="title_send_crash_reports">Send crash reports</string>
    <string name="summary_crash_reports_sending">Allow the app to send crash reports to a third-party service provider (ACRA, open-sourced both client and server) automatically so that we can review your crash and fix the bug faster and more easily.</string>
    <string name="title_attach_system_logs">Attach system logs to a report</string>
    <string name="title_use_device_id">Use DeviceID in reports to track problem</string>
    <string name="title_look_and_feel">Look and feel</string>
    <string name="title_tracking_adjustment">Tracking adjustment</string>
    <string name="title_other">Other</string>
    <string name="acra_toast_text">Sorry, the application crashed. A report will be sent to developers.</string>
    <string name="title_way_points_collected">%s waypoints collected</string>
    <string name="discard">Discard</string>
    <string name="sending_logs_successful">Logs are successfully sent!</string>
    <string name="error_sending_logs_unsuccessful">Logs haven\'t been successfully sent!</string>
    <string name="title_rate_our_app">Are you enjoying using our app?</string>
    <string name="no">No</string>
    <string name="unknown_time">Unknown time</string>
    <string name="summary_you_dont_have_fingerprint_presented">You don\'t have any fingerprints presented. Please, provide at least one.</string>
    <string name="summary_sensor_unavailable">The hardware is unavailable. Try again later.</string>
    <string name="summary_security_vulnerability">A security vulnerability has been discovered with one or more hardware sensors. Try to apply security patch.</string>
    <string name="unknown_error">Unknown error</string>
    <string name="title_logs_only_erros">Show only errors</string>
    <string name="title_logs_non_main_thread">Only non-main-thread issues</string>
    <string name="title_log_list_is_empty">No logs found</string>
    <string name="title_scheduling">Auto tracking scheduling</string>
    <string name="optimization_successful">Battery optimizations enabled</string>
    <string name="device_does_not_support_battery_optimization">Your device does not support opting out of battery optimization</string>
    <string name="error_opening_settings">Unable to open the settings, please do it manually</string>
    <string name="title_battery_usage_settings">Battery optimization settings</string>
    <string name="title_disable_battery_optimization">Disable battery optimization</string>
    <string name="title_pick_a_file">Pick a file</string>
    <string name="hint_password">password</string>
    <string name="login">login</string>
    <string name="server_url">server url</string>
    <string name="title_send">Send</string>
    <string name="error_upload_error">Upload error with response code: %s</string>
    <string name="hind_remote_path">remote path</string>
    <string name="title_hide_lifecycle_event">Hide lifecycle events</string>
</resources>