<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="10"
        android:key="@string/pref_min_distance"
        android:title="@string/title_min_distance" />

    <EditTextPreference
        android:defaultValue="5"
        android:key="@string/pref_min_location_update_interval"
        android:title="@string/title_min_location_update_interval" />

    <Preference android:title="@string/title_reset_to_defaults" />

    <Preference android:title="@string/title_report_bug">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/liinahamari/Follower/issues" />
    </Preference>

    <ListPreference
        android:entries="@array/themes"
        android:entryValues="@array/theme_values"
        android:key="@string/pref_theme"
        android:title="@string/title_themes"/>

    <ListPreference
        android:entries="@array/supported_languages"
        android:entryValues="@array/supported_locales"
        android:key="@string/pref_lang"
        android:title="@string/title_language" />

    <ListPreference
        android:entries="@array/track_representing"
        android:entryValues="@array/track_representing_values"
        android:key="@string/pref_track_representing"
        android:title="@string/title_track_representing" />
</PreferenceScreen>
