<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sendLogs"
        android:title="@string/title_send_logs"
        app:showAsAction="never" />
    <item
        android:id="@+id/clearLogs"
        android:title="@string/title_erase_logs"
        app:showAsAction="never" />

    <item
        android:checkable="true"
        android:checked="false"
        android:id="@+id/onlyErrors"
        android:title="@string/title_logs_only_erros"
        app:showAsAction="never" />

    <item
        android:checkable="true"
        android:checked="false"
        android:id="@+id/nonMainThreadOnly"
        android:title="@string/title_logs_non_main_thread"
        app:showAsAction="never" />

    <item
        android:checkable="true"
        android:checked="false"
        android:id="@+id/hideLifecycleEvents"
        android:title="@string/title_hide_lifecycle_event"
        app:showAsAction="never" />
</menu>