<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph.xml"
    app:startDestination="@id/tab_controls">

    <fragment
        android:id="@+id/tab_controls"
        android:name="dev.liinahamari.follower.screens.tracking_control.TrackingControlFragment"
        android:label="Tracking Control"
        tools:layout="@layout/fragment_tracking_control">
        <action
            android:id="@+id/action_to_settings"
            app:destination="@id/tab_settings" />
        <action
            android:id="@+id/action_to_track_list"
            app:destination="@id/tracklist_fragment" />
    </fragment>

    <fragment
        android:id="@+id/tab_settings"
        android:name="dev.liinahamari.follower.screens.settings.SettingsFragment"
        android:label="Settings"/>

    <fragment
        android:id="@+id/tracklist_fragment"
        android:name="dev.liinahamari.follower.screens.track_list.TrackListFragment"
        android:label="Track List"
        tools:layout="@layout/fragment_track_list">
        <action
            android:id="@+id/action_to_map"
            app:destination="@id/tab_map" />
        <action
            android:id="@+id/action_to_addresses_list"
            app:destination="@id/tab_addresses_list" />
    </fragment>

    <fragment
        android:id="@+id/tab_map"
        android:name="dev.liinahamari.follower.screens.trace_map.TrackMapFragment"
        android:label="Map"
        tools:layout="@layout/fragment_map" >
        <argument
            android:name="@string/arg_addressFragment_trackId"
            app:argType="long"
            android:defaultValue="-9999L" />
    </fragment>
    <fragment
        android:id="@+id/tab_addresses_list"
        android:name="dev.liinahamari.follower.screens.address_trace.AddressTraceFragment"
        android:label="Addresses List"
        tools:layout="@layout/fragment_address_trace" >
        <action
            android:id="@+id/action_to_single_pointer_map"
            app:destination="@id/tab_single_pointer_map" />
        <argument
            android:name="@string/arg_addressFragment_trackId"
            app:argType="long"
            android:defaultValue="-9999L" />
    </fragment>

    <fragment
        android:id="@+id/tab_single_pointer_map"
        android:name="dev.liinahamari.follower.screens.single_pointer_map.SinglePointerMapFragment"
        android:label="SinglePointerMap"
        tools:layout="@layout/fragment_map">
        <argument
            android:name="@string/arg_toSinglePointerMap_Time"
            app:argType="string" />
        <argument
            android:name="@string/arg_toSinglePointerMap_Longitude"
            app:argType="float"
            android:defaultValue="-999.0" />
        <argument
            android:name="@string/arg_toSinglePointerMap_Latitude"
            app:argType="float"
            android:defaultValue="-999.0" />
    </fragment>
</navigation>
